fix: keep IPM handle and stem attached to their buttons on small screens

--- a/src/app/components/digital-exercise-player/digital-exercise-player.component.css
+++ b/src/app/components/digital-exercise-player/digital-exercise-player.component.css
@@ -1331,22 +1331,13 @@
     order: 1;
   }
 
-  .ipm-label-col:nth-child(1) .ipm-handle,
-  .ipm-label-col:nth-child(1) .ipm-label-stem {
-    align-self: flex-end;
-    margin-top: 0;
-    margin-bottom: 4px;
-  }
   .ipm-label-col:nth-child(1) .ipm-label-pill {
-    flex-direction: column-reverse;
-    align-items: flex-start;
+    flex-direction: column;
   }
-  .ipm-label-col:nth-child(3) .ipm-handle,
-  .ipm-label-col:nth-child(3) .ipm-label-stem {
-    align-self: flex-start;
-    margin-top: 4px;
-    margin-bottom: 0;
+  .ipm-label-col:nth-child(1) .ipm-label-stem--right {
+    order: 1;
   }
+
   .ipm-label-col:nth-child(3) .ipm-label-pill {
     flex-direction: column;
     align-items: flex-start;
